src/objects/Actor__c.object
<CustomObject>
    <fields>
        <fullName>Biography__c</fullName>
        <label>Biography</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Birthday__c</fullName>
        <label>Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deathday__c</fullName>
        <label>Deathday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Known_as__c</fullName>
        <label>Known as</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Place_of_birth__c</fullName>
        <label>Place of birth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_path__c</fullName>
        <label>Profile path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Actor</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Actors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>